--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -10,6 +10,10 @@
     width: 400px !important;
 }
 
+.background-modal {
+    background-color: var(--background);
+}
+
 .container {
     display: flex;
     flex-direction: column;
