--- a/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.html
@@ -1,11 +1,11 @@
 <div class="footer-register">
-    <button class='deactive-button'
+    <button class='deactive-button' [ngStyle]="{'visibility': currentIndex === 0 ? 'hidden' : 'visible'}"
         [disabled]="currentIndex === 0"
         (click)="previous()">
         {{"botoes.previous" | translate}}
     </button>
     <button
-        [disabled]="!formValid"
+        [ngClass]="formValid ? 'active-button' : ''"
         (click)="next()">
         {{currentIndex === 2 ? ('geral.createAccount' | translate) : ('botoes.next' | translate)}}
     </button>
