--- a/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.scss
@@ -21,13 +21,15 @@ button {
 .active-button {
     border-radius: 4px;
     border: 1px solid var(--highlight);
-    background: var(--background);
-    color: var(--highlight);
+    background: var(--highlight);
+    color: var(--background);
 }
+
 .deactive-button {
     background: var(--background);
     color: rgba(var(--foreground),0.70);
     border: none;
+    justify-content: start;
 }
 
 button:disabled {
