--- a/src/app/shared/layout/modals/login-modal/login-modal.component.css
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.css
@@ -314,6 +314,10 @@ button {
     width: 100%;
 }
 
+input {
+    caret-color: transparent;
+}
+
 .btn-cancel {
     background-color: transparent;
     margin-top: 5px;
@@ -356,6 +360,10 @@ button {
     justify-content: center;
 }
 
+.label-inputs {
+    margin-bottom: 0px !important;
+}
+
 /* HTML: <div class="loader"></div> */
 .loader {
     width: 50px;
@@ -371,6 +379,13 @@ button {
 @keyframes l13 {
     100% {
         transform: rotate(1turn)
+    }
+}
+
+@media only screen and (min-width: 320px) {
+    .login-mode label {
+        font-size: 10px;
+        gap: 0px;
     }
 }
 
