--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
@@ -99,6 +99,17 @@ select:focus {
     gap: 8px;
 }
 
+input {
+    caret-color: transparent;
+}
+button{
+    caret-color: transparent;
+}
+
+radio{
+    caret-color: transparent;
+}
+
 .individual-genre+.input-md label {
     padding: 0px !important;
 }
