--- a/src/styles.css
+++ b/src/styles.css
@@ -1981,3 +1981,15 @@ label {
 #ex-doccheck-dialog {
     z-index: 90003 !important;
 }
+
+.icon-hover {
+    box-sizing: content-box;
+    fill: var(--background);
+    border: 0;
+    border-radius: 4px;
+    transition: fill 0.3s ease;
+}
+
+.icon-hover:hover path{
+    fill: var(--highlight);
+}
