--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.html
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.html
@@ -45,7 +45,7 @@
                         <p>{{ 'registerCancel.dontMissOut' | translate}} {{this.valorPromocao | currency}}</p>
                     </ng-container>
                     <ng-template #noPromotion>
-                        <p>{{ 'registerCancel.youreAlmostThere' | translate}}</p>
+                        <p class="p-cancel-register">{{ 'registerCancel.youreAlmostThere' | translate}}</p>
                     </ng-template>
                 </div>
             </div>
