--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
@@ -172,9 +172,14 @@ input[type=radio] {
 @media screen and (max-width: 320px) {
     .radio-custom {
         font-size: 10px;
+        margin-right: 4px;
     }
 
     .input-md label {
         padding: 0px;
+    }
+
+    .label-gender {
+        font-size: 11px;
     }
 }
