--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -249,7 +249,7 @@ button {
     align-items: center;
     justify-content: flex-end;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     height: 100%;
 }
 
@@ -259,7 +259,7 @@ button {
     color: rgba(255, 255, 255, 0.5);
     border: none;
     margin-top: 20px;
-    width: 80%;
+    width: 100%;
 }
 
 .register-cancel-modal {
@@ -283,7 +283,14 @@ button {
     color: white;
     font-family: "Open Sans", "sans-serif";
     font-weight: 600;
-    font-size: 20px;
+    font-size: 25px;
     margin-top: 42px;
     margin-bottom: 5px;
+    text-align: center;
+}
+
+.p-cancel-register {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
 }
