feature: validations for new registration screen

--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
@@ -72,6 +72,8 @@
                                                 <option *ngFor="let year of years" [value]="year">{{ year }}</option>
                                             </select>
                                         </div>
+                                        <app-error-msg [control]="form.get('year')" label="{{'geral.errorMinorAge' | translate}}"
+                                            class="text-left"></app-error-msg>
                                     </div>
                                 </div>
                             </div>
