feature: validations for new registration screen

--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.scss
@@ -218,6 +218,7 @@ a.link-termos-politica {
     align-items: flex-start;
     gap: 16px;
     width: 100%;
+    padding: 0px 0px !important;
 }
 
 .fulfilled {
