--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
@@ -158,24 +158,24 @@
                     [ngClass]="{'fulfilled': requirements.minimumCharacters, 'unfulfilled': !requirements.minimumCharacters}">
                     <i
                         [ngClass]="{'bi bi-check-circle': requirements.minimumCharacters, 'bi bi-x-circle': !requirements.minimumCharacters}"></i>
-                    {{'senhas.minimumCharactersPassword' | translate}}
+                        <span>{{'senhas.minimumCharactersPassword' | translate}}</span>
                 </li>
                 <li
                     [ngClass]="{'fulfilled': requirements.lowercaseLetter, 'unfulfilled': !requirements.lowercaseLetter}">
                     <i
                         [ngClass]="{'bi bi-check-circle': requirements.lowercaseLetter, 'bi bi-x-circle': !requirements.lowercaseLetter}"></i>
-                    {{'senhas.lowercaseLetter' | translate}}
+                        <span>{{'senhas.lowercaseLetter' | translate}}</span>
                 </li>
                 <li
                     [ngClass]="{'fulfilled': requirements.uppercaseLetter, 'unfulfilled': !requirements.uppercaseLetter}">
                     <i
                         [ngClass]="{'bi bi-check-circle': requirements.uppercaseLetter, 'bi bi-x-circle': !requirements.uppercaseLetter}"></i>
-                    {{'senhas.uppercaseLetter' | translate}}
+                        <span>{{'senhas.uppercaseLetter' | translate}}</span>
                 </li>
                 <li [ngClass]="{'fulfilled': requirements.specialChar, 'unfulfilled': !requirements.specialChar}">
                     <i
                         [ngClass]="{'bi bi-check-circle': requirements.specialChar, 'bi bi-x-circle': !requirements.specialChar}"></i>
-                    {{'senhas.specialChar' | translate}}
+                        <span>{{'senhas.specialChar' | translate}}</span>
                 </li>
             </div>
             <div style="width: 100%;">
