--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.scss
@@ -221,6 +221,12 @@ a.link-termos-politica {
     padding: 0px 0px !important;
 }
 
+.requirements-password li span {
+    font-size: 14px;
+    padding: 5px;
+}
+
+
 .fulfilled {
     color: green;
     text-decoration: line-through;
@@ -277,6 +283,12 @@ a.link-termos-politica {
     opacity: 0.6;
 }
 
+@media only screen and (max-width: 500px) {
+    .requirements-password li span {
+        font-size: 12px;
+        padding: 5px;
+    }
+}
 
 @media only screen and (max-width: 1024px) {
     .modal-body {
