--- a/src/styles.css
+++ b/src/styles.css
@@ -1981,3 +1981,15 @@ label {
 #ex-doccheck-dialog {
     z-index: 90003 !important;
 }
+
+
+.color-primary {
+    color: var(--highlight);
+    font-weight: 700;
+}
+
+.disabled {
+    pointer-events: none; 
+    text-decoration: none;
+    opacity: 0.5;
+}
